<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Eventure</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="hint">Hint</string>
    <string name="enter_as_guest">Wanna enter as guest? </string>
    <string name="skip">Skip</string>
    <string name="logout">Log Out</string>
    <string name="history">History</string>
    <string name="descrption">Description:</string>
    <string name="iam">I am</string>
    <string name="user">User</string>
    <string name="add_email">Add Email</string>
    <string name="select_region_code">Select Region Code</string>
    <string name="search">Search</string>
    <string name="no_matches_found">No Matches Found</string>
    <string name="li">LI</string>
    <string name="example">Example</string>
    <string name="or">Or</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="verification">VERIFICATION</string>
    <string name="timer">timer</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="submit">Submit</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="resend">RESEND</string>
    <string name="default_web_client_id" translatable="false">729418592990-4osiaurrh54bbmfnohqi1bp82f57hr7o.apps.googleusercontent.com</string>
    <string name="category">Category: </string>
    <string name="type">Type: </string>
    <string name="date">Date: </string>
    <string name="start_time">Start Time: </string>
    <string name="end_time">End Time: </string>
    <string name="entrance_fee">Entrance Fee: </string>
    <string name="description">Description: </string>
<string name="hello" tools:ignore="ExtraTranslation">hello</string>
    <string-array name="date_filter_options">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
    </string-array>
    <string-array name="event_categories">
        <item>All</item>
        <item>Music</item>
        <item>Art</item>
        <item>Theatre</item>
        <item>Education</item>
        <item>Nature</item>
        <item>Food</item>
    </string-array>

    <string-array name="add_event_categories">
        <item>Music</item>
        <item>Art</item>
        <item>Theatre</item>
        <item>Education</item>
        <item>Nature</item>
        <item>Food</item>
    </string-array>


</resources>