<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintWidth_percent="0.11"
            app:layout_constraintStart_toStartOf="@id/header"
            app:layout_constraintTop_toTopOf="@id/header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/header"
            app:layout_constraintEnd_toEndOf="@id/header"
            app:layout_constraintTop_toTopOf="@id/header"
            app:layout_constraintBottom_toBottomOf="@id/header"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:layout_marginStart="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/category"
        app:layout_constraintTop_toTopOf="@id/category"
        app:layout_constraintBottom_toBottomOf="@id/category"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/category_desc"
        app:layout_constraintTop_toTopOf="@id/type"
        app:layout_constraintBottom_toBottomOf="@id/type"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/category_desc"
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintBottom_toBottomOf="@id/date"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/start_time_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/category_desc"
        app:layout_constraintTop_toTopOf="@id/start_time"
        app:layout_constraintBottom_toBottomOf="@id/start_time"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_time"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/end_time_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/category_desc"
        app:layout_constraintTop_toTopOf="@id/end_time"
        app:layout_constraintBottom_toBottomOf="@id/end_time"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/entrance_fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrance_fee"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_time"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/entrance_fee_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/category_desc"
        app:layout_constraintTop_toTopOf="@id/entrance_fee"
        app:layout_constraintBottom_toBottomOf="@id/entrance_fee"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entrance_fee"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/example"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>