<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/select_region_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/searchborder"
        android:drawableLeft="@drawable/baseline_search_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/white"
        android:hint="@string/search"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bottomrec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/searchbar"
        app:layout_constraintStart_toStartOf="@id/searchbar"
        app:layout_constraintTop_toBottomOf="@+id/searchbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptystate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottomrec"


        >

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/nomatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_search_24" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_matches_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/nomatches"
            app:layout_constraintStart_toStartOf="@id/nomatches"
            app:layout_constraintTop_toBottomOf="@id/nomatches" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
