<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/edit_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/baseline_mode_24"
            app:layout_constraintEnd_toEndOf="@id/profile_info"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toTopOf="@id/profile_info"
            app:layout_constraintWidth_percent="0.11" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/icon_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/profile_info"
            app:layout_constraintEnd_toEndOf="@id/profile_info"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintStart_toStartOf="@id/profile_info"
            app:layout_constraintTop_toTopOf="@id/profile_info"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintWidth_percent="0.33">

            <TextView
                android:id="@+id/icon_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true"
                android:background="@drawable/profile2"
                android:gravity="center"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/icon_container"
                app:layout_constraintEnd_toEndOf="@id/icon_container"
                app:layout_constraintStart_toStartOf="@id/icon_container"
                app:layout_constraintTop_toTopOf="@id/icon_container" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/contact"
            app:layout_constraintEnd_toEndOf="@id/icon_container"
            app:layout_constraintStart_toStartOf="@id/icon_container"
            app:layout_constraintTop_toBottomOf="@id/icon_container" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_email"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/username"
            app:layout_constraintStart_toStartOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/username" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/logout"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>

