<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        android:padding="20dp"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/Text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_your_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
            android:textSize="40sp"
            android:textStyle="bold"
            app:fontFamily="@font/average_sans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.ev.components.DescriptionText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:helperTextEnabled="true"
        app:inputHint="Phone Number"
        app:inputType="PHONE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />
    <com.example.ev.components.ButtonComponent
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:theme="@style/MyButtonComponent_Filled_Purple"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="@+id/phoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


    <com.example.ev.components.Or
        android:id="@+id/or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <com.example.ev.components.ButtonComponent
        android:id="@+id/googlebutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/icons8_google_30"
        android:paddingStart="15dp"
        android:theme="@style/MyButtonComponent_Filled_Purple"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/enter_as_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_as_guest"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/enter_as_guest"
            app:layout_constraintEnd_toStartOf="@id/skip"
            app:layout_constraintStart_toStartOf="@id/enter_as_guest" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/skip"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/enter_as_guest"
            app:layout_constraintEnd_toEndOf="@id/enter_as_guest"
            app:layout_constraintStart_toEndOf="@id/guest" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>